Overflow issue resolved

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -8,4 +8,5 @@
 .main-content-container {
 	display:flex;
 	height:100%;
+	overflow:hidden;
 }
